force-app/main/default/objects/CustomerInterest__c/CustomerInterest__c.object-meta.xml
<CustomObject>
    <description>Object store store cross sell product details selected by customers.</description>
    <label>Customer Interest</label>
    <nameField>
        <label>Customer Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>