force-app/main/default/objects/CustomerInterest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application</description>
    <label>Application</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Interests</relationshipLabel>
    <relationshipName>Customer_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>