force-app/main/default/objects/CustomerInterest__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <description>Interest Type to identify focus of the product selection</description>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Initial Interest</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>