force-app/main/default/objects/CustomerInterest__c/fields/ImageName__c.field-meta.xml
<CustomField>
    <fullName>ImageName__c</fullName>
    <description>Product image name</description>
    <label>Image Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>