force-app/main/default/objects/CustomerInterest__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <description>product Image URL</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>