force-app/main/default/objects/CustomerInterest__c/fields/InterestProduct__c.field-meta.xml
<CustomField>
    <fullName>InterestProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interested product of customer</description>
    <label>Interest Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Customer Interests</relationshipLabel>
    <relationshipName>CustomerInterests</relationshipName>
    <type>Lookup</type>
</CustomField>